--- a/assets/scss/objects/_work.scss
+++ b/assets/scss/objects/_work.scss
@@ -3,7 +3,7 @@
  * -------- */
 
 .page-header__categories {
-	margin: 0 auto;
+	margin: 0 auto .5em;
 	display: inline-block;
 }
 
